add example postprocs

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -40,7 +40,7 @@
    "id": "8ed9a8b5",
    "metadata": {},
    "source": [
-    "Todo"
+    "> Anthropogenic land cover/use change is a significant threat to habitats and ecosystems. . Knowledge in the magnitude and historical trends in land cover is needed to understand the changing status of the key elements of the landscape and to better target management efforts. However, this information was not easily available before the start of satellite mapping campaign scheme. Further, coarse-resolution satellite data does not allow detection of small or narrow elements in the landscape. We extracted data from old topographic maps to examine long-term land cover changes. As a case study, we utilized old digital maps (1965, 1984 and 1985) and topographic databases (2005 and 2022) to evaluate changes in the arable land cover and the density of linear water elements (ditches and streams) in an area characterized by modern forest management and forest-agricultural land transitions located in southern boreal region in Finland. "
    ]
   },
   {
@@ -92,13 +92,15 @@
     "* Sonja Kivinen, University of Eastern Finland\n",
     "* Sarita Keski-Saari, University of Eastern Finland\n",
     "* Laura Poikolainen, University of Eastern Finland\n",
-    "* Timo Kumpula, University of Eastern Finland"
+    "* Timo Kumpula, University of Eastern Finland\n",
+    "\n",
+    "This work is a part of [IBC-CARBON](https://www.ibccarbon.fi/en-US) WP4."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   }
