--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -69,6 +69,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f0b48a5d",
+   "metadata": {},
+   "source": [
+    "<img src='nb_figures/area_map.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c917325",
    "metadata": {},
    "source": [
