rescale index image

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -69,10 +69,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0b48a5d",
+   "id": "3562ac5e",
    "metadata": {},
    "source": [
-    "<img src='nb_figures/area_map.png'>"
+    "<img src='nb_figures/area_map.png' width='700'>"
    ]
   },
   {
