--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -48,7 +48,7 @@
    "id": "f55ec57e",
    "metadata": {},
    "source": [
-    "<img src='nb_figures/area_map.png' width='700'>"
+    "<img src='nb_figures/area_map.jpeg' width='700'>"
    ]
   },
   {
