update abstract and layout

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -28,11 +28,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ed9a8b5",
    "metadata": {},
    "source": [
-    "> Knowledge in the magnitude and historical trends in land use and land cover is needed to understand the changing status of the key elements of the landscape and to better target management efforts. However, this information is not easily available before the start of satellite campaign missions. Scanned historical maps are a valuable but underused source of land use and land cover information. As a case study, we used U-Net to automatically extract fields, mires, roads, waterways and water bodies from scanned historical maps dated 1965, 1984 and 1985 for our 900 km² study area in Southern Finland. We then used these data, along with the topographic databases from 2005 and 2022 to quantify the LULC changes for the past 57 years. For example, the total area of fields decreased by around 27 km² and the total length of watercourses increased by around 2250 km in our study area."
+    "> Knowledge in the magnitude and historical trends in land use and land cover is needed to understand the changing status of the key elements of the landscape and to better target management efforts. However, this information is not easily available before the start of satellite campaign missions. Scanned historical maps are a valuable but underused source of land use and land cover information. As a case study, we used U-Net to automatically extract fields, mires, roads, watercourses, and water bodies from scanned historical maps, dated 1965, 1984 and 1985 for our 900 km² study area in Southern Finland. We then used these data, along with the topographic databases from 2005 and 2022, to quantify the LULC changes for the past 57 years. For example, the total area of fields decreased by around 27 km², and the total length of watercourses increased by around 2250 km in our study area."
    ]
   },
   {
@@ -84,9 +85,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.7.4 (default, Aug  9 2019, 18:34:13) [MSC v.1915 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "dda052d61230f5d744ac7e4c632c6428d2bf5f1154d01083f7ce1a879789cee6"
+   }
   }
  },
  "nbformat": 4,
