--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -28,12 +28,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8ed9a8b5",
    "metadata": {},
    "source": [
-    "> Knowledge in the magnitude and historical trends in land use and land cover is needed to understand the changing status of the key elements of the landscape and to better target management efforts. However, this information is not easily available before the start of satellite campaign missions. Scanned historical maps are a valuable but underused source of land use and land cover information. As a case study, we used U-Net to automatically extract fields, mires, roads, watercourses, and water bodies from scanned historical maps, dated 1965, 1984 and 1985 for our 900 km² study area in Southern Finland. We then used these data, along with the topographic databases from 2005 and 2022, to quantify the LULC changes for the past 57 years. For example, the total area of fields decreased by around 27 km², and the total length of watercourses increased by around 2250 km in our study area."
+    "> Knowledge in the magnitude and historical trends in land use and land cover (LULC) is needed to understand the changing status of the key elements of the landscape and to better target management efforts. However, this information is not easily available before the start of satellite campaign missions. Scanned historical maps are a valuable but underused source of LULC information. As a case study, we used U-Net to automatically extract fields, mires, roads, watercourses, and water bodies from scanned historical maps, dated 1965, 1984 and 1985 for our 900 km² study area in Southern Finland. We then used these data, along with the topographic databases from 2005 and 2022, to quantify the LULC changes for the past 57 years. For example, the total area of fields decreased by around 27 km², and the total length of watercourses increased by around 2250 km in our study area."
    ]
   },
   {
@@ -57,7 +56,7 @@
    "id": "0c917325",
    "metadata": {},
    "source": [
-    "The study area is located in the vicinity of Evo, Finland, and consists of 9 map sheets. From each map sheet, we have two different historical scanned maps, older from 1965 and newer from either 1984 or 1985. The maps were provided by [National Land Survey of Finland](https://www.maanmittauslaitos.fi/en/e-services/old-printed-maps), and the ground control points for each individual map were acquired from [vanhatkartat.fi](https://vanhatkartat.fi) by Shingle Oy. Reference data from 2005 and 2022 is based on topographic database by NLS Finland, and it can be acquired for instance from [Paituli download service](https://paituli.csc.fi/download.html)."
+    "The study area is located in the vicinity of Evo, Finland, and consists of 9 map sheets, each covering an area of 10x10 km. From each map sheet, we have two different historical scanned maps, older from 1965 and newer from either 1984 or 1985. The maps were provided by [National Land Survey of Finland](https://www.maanmittauslaitos.fi/en/e-services/old-printed-maps), and the ground control points for each individual map were acquired from [vanhatkartat.fi](https://vanhatkartat.fi) by Shingle Oy. Reference data from 2005 and 2022 is based on topographic database by NLS Finland, and it can be acquired for instance from [Paituli download service](https://paituli.csc.fi/download.html)."
    ]
   },
   {
@@ -77,21 +76,56 @@
     "* Sonja Kivinen, University of Eastern Finland\n",
     "* Sarita Keski-Saari, University of Eastern Finland\n",
     "* Laura Poikolainen, University of Eastern Finland\n",
-    "* Timo Kumpula, University of Eastern Finland\n",
+    "* Timo Kumpula, University of Eastern Finland"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ed9527f",
+   "metadata": {},
+   "source": [
+    "# Acknowleggments\n",
     "\n",
-    "This work is a part of [IBC-CARBON](https://www.ibccarbon.fi/en-US) WP4."
+    "The authors wish to acknowledge CSC – IT Center for Science, Finland, for computational resources.\n",
+    "\n",
+    "This study was supported by the following projects:\n",
+    "\n",
+    "* [IBC-Carbon](https://ibccarbon.fi)\n",
+    "* [Finnish Ecosystem Observatory](https://feosuomi.fi)\n",
+    "* [C-NEUT](https://www.syke.fi/fi-FI/Tutkimus__kehittaminen/Tutkimus_ja_kehittamishankkeet/Hankkeet/Hiilineutraaliuden_spatiaalisesti_tarkka_yhdennetty_arviointi_boreaalisessa_maisemassa_ja_alueilla_CNEUT)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python [conda env:dronedetector-dev]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-dronedetector-dev-py"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.7.4 (default, Aug  9 2019, 18:34:13) [MSC v.1915 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "vscode": {
    "interpreter": {
