--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -21,6 +21,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50762ba6",
+   "metadata": {},
+   "source": [
+    "Published in Ambio: [DOI: 10.1007/s13280-023-01838-z](http://dx.doi.org/10.1007/s13280-023-01838-z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1c4cfe89",
    "metadata": {},
    "source": [
@@ -84,7 +92,7 @@
    "id": "0ed9527f",
    "metadata": {},
    "source": [
-    "# Acknowleggments\n",
+    "# Acknowledgments\n",
     "\n",
     "The authors wish to acknowledge CSC – IT Center for Science, Finland, for computational resources.\n",
     "\n",
